# furby_therapist

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  furby_therapist_cli  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_interactive.py  tox.ini
.kiro/specs/furby-voice-assistant/: design.md  requirements.md  tasks.md
.kiro/steering/: python-commands.md
docs/: cli_usage.md  deployment.md  installation.md  library_usage.md  library_usage_examples.md  test_organization.md  test_status.md  testing.md  troubleshooting.md
furby_therapist/: __init__.py  __main__.py  cli.py  database.py  error_handler.py  furbish_auditor.py  matcher.py  models.py  processor.py  responses.json  responses.py
furby_therapist/cli/: __init__.py  main.py
furby_therapist/core/: __init__.py  database.py  error_handler.py  furbish_reference.py  library.py  matcher.py  processor.py  responses.py
furby_therapist/data/: __init__.py  cycling_responses.json  furbish_documentation.md
furby_therapist/models/: __init__.py  models.py
scripts/: deploy.py
tests/: README.md  __init__.py  test_bicycle_culture.py  test_cycling_mode.py  test_error_handling.py  test_furbish_authenticity.py  test_greetings.py  test_integration.py  test_matcher.py  test_processor.py  test_responses.py  test_runner.py
tests/cli/: __init__.py  test_cycling_mode.py  test_main.py
tests/core/: __init__.py  test_database.py  test_library.py  test_matcher.py  test_processor.py  test_responses.py
tests/features/: __init__.py  test_bicycle_culture.py  test_furbish_authenticity.py  test_greetings.py
tests/integration/: __init__.py  test_end_to_end.py  test_error_handling.py  test_integration.py  test_therapeutic_quality.py
tests/manual/: __init__.py  test_scenarios.py
tests/models/: __init__.py  test_models.py
tests/performance/: __init__.py  test_performance.py
